<resources>
    <string name="app_name">Tripstuffreminder</string>

    <!-- Fragment Trips -->
    <string name="no_trip">There are no trips. Add one clicking on the + button</string>
    <string name="error_trips">Error retrieving trips</string>

    <!-- Add trip -->
    <string name="destination">Destination</string>
    <string name="departure_airport">Departure airport</string>
    <string name="destination_airport">Destination airport</string>
    <string name="airport">Airport</string>
    <string name="ok">OK</string>

    <!-- Airports -->
    <string name="airports_title">AIRPORTS</string>
    <string name="hint_type_airport">Type the name of the airport</string>
    <string name="error_airports">Error retrieving airports</string>

    <!-- Locations -->
    <string name="locations_title">LOCATIONS</string>
    <string name="hint_location_name">Type the location name</string>
    <string name="bt_search_description">Search location</string>
    <string name="error_locations">Error retrieving locations</string>

    <!-- Menu -->
    <string name="about">About</string>

    <!-- About -->
    <string name="app_version">Version 1.0</string>
    <string name="legal_notifications">Legal notifications</string>
</resources>
