<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:paddingBottom="5dp"/>

        <EditText
            android:id="@+id/edit_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:focusable="false"
            android:textColor="@color/black_effective"
            android:layout_below="@+id/tv_destination"/>

        <TextView
            android:id="@+id/tv_departure_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_airport"
            android:paddingBottom="5dp"
            android:layout_below="@+id/edit_destination"/>

        <EditText
            android:id="@+id/edit_departure_airport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:focusable="false"
            android:textColor="@color/black_effective"
            android:layout_below="@+id/tv_departure_airport"/>

        <TextView
            android:id="@+id/tv_destination_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_airport"
            android:paddingBottom="5dp"
            android:layout_below="@+id/edit_departure_airport"/>

        <EditText
            android:id="@+id/edit_destination_airport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:focusable="false"
            android:textColor="@color/black_effective"
            android:layout_below="@+id/tv_destination_airport"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>